- fullcalendar update to 5.6.0 version

--- a/src/Modules/Laser.Orchard.jQueryPlugins/Laser.Orchard.jQueryPlugins.csproj
+++ b/src/Modules/Laser.Orchard.jQueryPlugins/Laser.Orchard.jQueryPlugins.csproj
@@ -258,6 +258,92 @@
     <Content Include="BootstrapItalia\src\svg\it-zoom-in.svg" />
     <Content Include="BootstrapItalia\src\svg\it-zoom-out.svg" />
     <Content Include="BootstrapItalia\svg\sprite.svg" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-2.2.3\fullcalendar.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-2.2.3\fullcalendar.min.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-2.2.3\gcal.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-2.2.3\lang-all.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-2.2.3\moment.min.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales-all.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales-all.min.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\af.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-dz.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-kw.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-ly.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-ma.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-sa.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar-tn.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ar.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\az.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\bg.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\bn.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\bs.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ca.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\cs.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\cy.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\da.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\de-at.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\de.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\el.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\en-au.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\en-gb.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\en-nz.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\eo.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\es-us.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\es.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\et.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\eu.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\fa.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\fi.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\fr-ca.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\fr-ch.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\fr.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\gl.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\he.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\hi.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\hr.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\hu.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\hy-am.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\id.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\is.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\it.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ja.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ka.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\kk.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ko.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\lb.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\lt.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\lv.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\mk.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ms.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\nb.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ne.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\nl.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\nn.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\pl.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\pt-br.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\pt.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ro.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ru.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sk.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sl.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sq.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sr-cyrl.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sr.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\sv.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ta-in.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\th.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\tr.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\ug.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\uk.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\uz.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\vi.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\zh-cn.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\locales\zh-tw.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\main.css" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\main.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\main.min.css" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\lib\main.min.js" />
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\LICENSE.txt" />
     <Content Include="Scripts\image-picker.min.js" />
     <Content Include="Scripts\jqPlot\jquery.jqplot.js" />
     <Content Include="Scripts\jqPlot\jquery.jqplot.min.js" />
@@ -597,6 +683,7 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
+    <Content Include="Scripts\FullCalendar\fullcalendar-5.6.0\README.md" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
