--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Services\CheckoutConditions\WorkflowCheckoutCondition.cs" />
     <Compile Include="Services\CheckoutExtensionContext.cs" />
     <Compile Include="Services\CheckoutHelperService.cs" />
+    <Compile Include="Services\CheckoutPoliciesOrderAdditionalInformationProvider.cs" />
     <Compile Include="Services\CheckoutPoliciesService.cs" />
     <Compile Include="Services\CountriesHierarchyDoesNotExist.cs" />
     <Compile Include="Services\IAddressConfigurationService.cs" />
@@ -210,6 +211,7 @@
     <Compile Include="ViewModels\AddressConfigurationTerritoryViewModel.cs" />
     <Compile Include="ViewModels\AddressEditViewModel.cs" />
     <Compile Include="ViewModels\AddressesVM.cs" />
+    <Compile Include="ViewModels\CheckoutPoliciesOrderViewModel.cs" />
     <Compile Include="ViewModels\CheckoutPolicySettingsPartEditViewModel.cs" />
     <Compile Include="ViewModels\CheckoutSettingsPartViewModel.cs" />
     <Compile Include="ViewModels\CheckoutViewModel.cs" />
@@ -389,6 +391,7 @@
     <Content Include="Views\DefinitionTemplates\ProductVatConfigurationPartInputPriceSettingsVM.cshtml" />
     <Content Include="Views\EditorTemplates\SiteSettings\CheckoutPolicySettings.cshtml" />
     <Content Include="Views\CheckoutPoliciesCheckoutStartShape.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts\Order.CheckoutPolicies.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DefinitionTemplates\GTMProductSettingVM.cshtml" />
