--- a/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
+++ b/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
@@ -100,7 +100,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drivers\EncryptedStringFieldDriver.cs" />
+    <Compile Include="Fields\EncryptedStringField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\EncryptedStringFieldPermissions.cs" />
+    <Compile Include="Settings\EncryptedStringFieldEditorEvents.cs" />
+    <Compile Include="Settings\EncryptedStringFieldSettings.cs" />
+    <Compile Include="ViewModels\EncryptedStringFieldEditViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets.json" />
@@ -127,10 +133,13 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\DefinitionTemplates\EncryptedStringFieldSettings.cshtml" />
+    <Content Include="Views\EditorTemplates\Fields\EncryptedStringField.Edit.cshtml" />
+    <Content Include="Views\EditorTemplates\Fields\EncryptedStringField.Unauthorized.cshtml" />
+    <Content Include="Placement.info" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
