--- a/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
+++ b/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Fields\EncryptedStringField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\EncryptedStringFieldPermissions.cs" />
+    <Compile Include="Services\SecureFieldService.cs" />
+    <Compile Include="Services\ISecureFieldService.cs" />
     <Compile Include="Settings\EncryptedStringFieldEditorEvents.cs" />
     <Compile Include="Settings\EncryptedStringFieldSettings.cs" />
     <Compile Include="ViewModels\EncryptedStringFieldEditViewModel.cs" />
