--- a/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
+++ b/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
@@ -102,6 +102,8 @@
   <ItemGroup>
     <Compile Include="Drivers\EncryptedStringFieldDriver.cs" />
     <Compile Include="Fields\EncryptedStringField.cs" />
+    <Compile Include="Fields\EncryptedStringFieldForm.cs" />
+    <Compile Include="Filters\EncryptedStringFieldFilterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\EncryptedStringFieldAuthorizationEventHandler.cs" />
     <Compile Include="Security\EncryptedStringFieldEditPermission.cs" />
@@ -123,6 +125,14 @@
     <Content Include="Module.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Forms\Orchard.Forms.csproj">
+      <Project>{642a49d7-8752-4177-80d6-bfbbcfad3de0}</Project>
+      <Name>Orchard.Forms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Projections\Orchard.Projections.csproj">
+      <Project>{5531e894-d259-45a3-aa61-26dbe720c1ce}</Project>
+      <Name>Orchard.Projections</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2D1D92BB-4555-4CBE-8D0E-63563D6CE4C6}</Project>
       <Name>Orchard.Framework</Name>
