--- a/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
+++ b/src/Modules/Laser.Orchard.SecureData/Laser.Orchard.SecureData.csproj
@@ -101,18 +101,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drivers\EncryptedStringFieldDriver.cs" />
+    <Compile Include="Drivers\HashedStringFieldDriver.cs" />
     <Compile Include="Fields\EncryptedStringField.cs" />
-    <Compile Include="Fields\EncryptedStringFieldForm.cs" />
+    <Compile Include="Fields\SecureStringFieldForm.cs" />
+    <Compile Include="Fields\HashedStringField.cs" />
     <Compile Include="Filters\EncryptedStringFieldFilterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\EncryptedStringFieldAuthorizationEventHandler.cs" />
     <Compile Include="Security\EncryptedStringFieldEditPermission.cs" />
     <Compile Include="Security\EncryptedStringFieldPermissions.cs" />
+    <Compile Include="Security\HashedStringFieldAuthorizationEventHandler.cs" />
+    <Compile Include="Security\HashedStringFieldEditPermission.cs" />
+    <Compile Include="Security\HashedStringFieldPermissions.cs" />
     <Compile Include="Services\SecureFieldService.cs" />
     <Compile Include="Services\ISecureFieldService.cs" />
     <Compile Include="Settings\EncryptedStringFieldEditorEvents.cs" />
     <Compile Include="Settings\EncryptedStringFieldSettings.cs" />
+    <Compile Include="Settings\HashedStringFieldSettings.cs" />
     <Compile Include="ViewModels\EncryptedStringFieldEditViewModel.cs" />
+    <Compile Include="ViewModels\HashedStringFieldEditViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets.json" />
@@ -154,6 +161,9 @@
     <Content Include="Views\EditorTemplates\Fields\EncryptedStringField.Edit.cshtml" />
     <Content Include="Views\EditorTemplates\Fields\EncryptedStringField.Unauthorized.cshtml" />
     <Content Include="Placement.info" />
+    <Content Include="Views\DefinitionTemplates\HashedStringFieldSettings.cshtml" />
+    <Content Include="Views\EditorTemplates\Fields\HashedStringField.Unauthorized.cshtml" />
+    <Content Include="Views\EditorTemplates\Fields\HashedStringField.Edit.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
