Modified AddRecords of TranslatorAPIController to manage Undefined ContainerType. Upgrades to manage Undefined ContainerType in backoffice pages and several functions / routines in service and controller. Added MessageTranslatorAPIController to manage AddTranslatedRecords.

--- a/src/Modules/Laser.Orchard.Translator/Laser.Orchard.Translator.csproj
+++ b/src/Modules/Laser.Orchard.Translator/Laser.Orchard.Translator.csproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminMenu.cs" />
+    <Compile Include="Controllers\MessageTranslatorAPIController.cs" />
     <Compile Include="Controllers\TranslatorAPIController.cs" />
     <Compile Include="Controllers\TranslatorController.cs" />
     <Compile Include="Controllers\TranslatorTreeController.cs" />
