Added TranslationRecordViewModel to manage TranslatorForm better. In translation message update functions (TranslatorServices), added the update of ContainerName and ContainerType. Added DropDownLists to select culture and ContainerName (grouped by ContainerType) to TranslatorForm. Added "Save as New" button to duplicate a record without overwriting an existing one (if there's a matching translation record, it's overwritten anyways).

--- a/src/Modules/Laser.Orchard.Translator/Laser.Orchard.Translator.csproj
+++ b/src/Modules/Laser.Orchard.Translator/Laser.Orchard.Translator.csproj
@@ -132,6 +132,7 @@
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\TranslatorServices.cs" />
     <Compile Include="ViewModels\TranslationDetailViewModel.cs" />
+    <Compile Include="ViewModels\TranslationRecordViewModel.cs" />
     <Compile Include="ViewModels\TranslationTreeNodeViewModel.cs" />
     <Compile Include="ViewModels\TranslationTreeViewModel.cs" />
   </ItemGroup>
