--- a/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
+++ b/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
@@ -103,11 +103,15 @@
     <Compile Include="FieldTypeEditors\HiddenStringFieldTypeEditor.cs" />
     <Compile Include="FilterEditors\Forms\HiddenStringFieldFilterForm.cs" />
     <Compile Include="FilterEditors\HiddenStringFieldFilterEditor.cs" />
+    <Compile Include="Handlers\HiddenStringFieldAuthorizationEventHandler.cs" />
     <Compile Include="Handlers\HiddenStringFieldHandler.cs" />
     <Compile Include="HiddenFieldsMigrations.cs" />
     <Compile Include="HiddenFieldsPermissions.cs" />
     <Compile Include="Projections\HiddenStringFieldFilter.cs" />
+    <Compile Include="Security\HiddenFieldEditPermission.cs" />
+    <Compile Include="Services\HiddenFieldService.cs" />
     <Compile Include="Services\HiddenStringFieldUpdateProcessor.cs" />
+    <Compile Include="Services\IHiddenFieldService.cs" />
     <Compile Include="Services\IHiddenStringFieldUpdateProcessor.cs" />
     <Compile Include="Settings\HiddenStringFieldSettings.cs" />
     <Compile Include="Settings\HiddenStringFieldsSettingsEvents.cs" />
