--- a/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
+++ b/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
@@ -109,6 +109,7 @@
     <Compile Include="HiddenFieldsPermissions.cs" />
     <Compile Include="Projections\HiddenStringFieldFilter.cs" />
     <Compile Include="Security\HiddenFieldEditPermission.cs" />
+    <Compile Include="Security\HiddenFieldSeePermission.cs" />
     <Compile Include="Services\HiddenFieldService.cs" />
     <Compile Include="Services\HiddenStringFieldUpdateProcessor.cs" />
     <Compile Include="Services\IHiddenFieldService.cs" />
@@ -162,6 +163,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Fields.Hidden.String.Edit.Unauthorized.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
