Managed culture in DateCouponApplicabilityCriteria and associate form. Reordered includes and requires for scripts and styles.

--- a/src/Modules/Laser.Orchard.StartupConfig/bundleconfig.json
+++ b/src/Modules/Laser.Orchard.StartupConfig/bundleconfig.json
@@ -4,5 +4,11 @@
     "inputFiles": [
       "Styles/font-awesome/css/all.css"
     ]
+  },
+  {
+    "outputFileName": "Scripts/datetime-editor-filter.min.js",
+    "inputFiles": [
+      "Scripts/datetime-editor-filter.js"
+    ]
   }
 ]
