--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -146,6 +146,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\datetime-editor-filter.js" />
+    <Content Include="Scripts\datetime-editor-filter.min.js">
+      <DependentUpon>datetime-editor-filter.js</DependentUpon>
+    </Content>
     <Content Include="Views\MerchantDomainAssociationAdmin\Index.cshtml" />
     <None Include="Assets\laser-base.scss" />
     <Content Include="Recipes\TinyMCEToolbarExtension.recipe.xml" />
