Added filters and forms for average rating and reviews count.

--- a/src/Modules/Contrib.Voting/Contrib.Voting.csproj
+++ b/src/Modules/Contrib.Voting/Contrib.Voting.csproj
@@ -100,6 +100,10 @@
   <ItemGroup>
     <Compile Include="Drivers\VoteWidgetPartDriver.cs" />
     <Compile Include="Events\IVotingEventHandler.cs" />
+    <Compile Include="Filters\VoteAverageFilterForm.cs" />
+    <Compile Include="Filters\VoteCountFilter.cs" />
+    <Compile Include="Filters\VoteCountFilterForm.cs" />
+    <Compile Include="Filters\VoteFilterBase.cs" />
     <Compile Include="Functions\Average.cs" />
     <Compile Include="Functions\Count.cs" />
     <Compile Include="Functions\Sum.cs" />
@@ -110,6 +114,7 @@
     <Compile Include="Models\ResultRecord.cs" />
     <Compile Include="Models\VoteRecord.cs" />
     <Compile Include="Models\VoteWidgetPartRecord.cs" />
+    <Compile Include="Filters\VoteAverageFilter.cs" />
     <Compile Include="Services\Calculus.cs" />
     <Compile Include="Services\CalculusQueue.cs" />
     <Compile Include="Services\DefaultFunctionCalculator.cs" />
@@ -143,15 +148,28 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Nwazet.Commerce\Nwazet.Commerce.csproj">
+      <Project>{909acc2c-d672-4752-b75b-6822e05fe0e3}</Project>
+      <Name>Nwazet.Commerce</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Core\Orchard.Core.csproj">
       <Project>{9916839c-39fc-4ceb-a5af-89ca7e87119f}</Project>
       <Name>Orchard.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Forms\Orchard.Forms.csproj">
+      <Project>{642a49d7-8752-4177-80d6-bfbbcfad3de0}</Project>
+      <Name>Orchard.Forms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Projections\Orchard.Projections.csproj">
+      <Project>{5531E894-D259-45A3-AA61-26DBE720C1CE}</Project>
+      <Name>Orchard.Projections</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
       <Name>Orchard.Framework</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
