--- a/src/Modules/Contrib.Reviews/Contrib.Reviews.csproj
+++ b/src/Modules/Contrib.Reviews/Contrib.Reviews.csproj
@@ -165,6 +165,10 @@
       <Project>{9916839c-39fc-4ceb-a5af-89ca7e87119f}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.OutputCache\Orchard.OutputCache.csproj">
+      <Project>{6e444ff1-a47c-4cf6-bb3f-507c8ebd776d}</Project>
+      <Name>Orchard.OutputCache</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
       <Name>Orchard.Framework</Name>
@@ -173,6 +177,10 @@
       <Project>{4da5f35f-e62c-4b49-b5a8-379503257b3a}</Project>
       <Name>Contrib.Voting</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Laser.Orchard.StartupConfig\Laser.Orchard.StartupConfig.csproj">
+      <Project>{17db396a-e8ce-4317-b558-8a5c17206518}</Project>
+      <Name>Laser.Orchard.StartupConfig</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
