Added LayerPart to list of parts that provide identity, so that IdentityPart is not added by default to new layers, because that would cause issues with import/export use cases.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -236,7 +236,9 @@
   <ItemGroup>
     <Content Include="Assets.json" />
     <Content Include="Assets\Styles.less" />
-    <Content Include="Recipes\BaseProduct.recipe.xml" />
+    <Content Include="Recipes\BaseProduct.recipe.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Recipes\SetupHierarchyTerritoryVatConfiguration.recipe.xml" />
     <Content Include="Recipes\DefaultShippingMethods.recipe.xml" />
     <Content Include="Recipes\SetupEcommerceTerritoriesVATShipping.recipe.xml" />
