added a provider to save the cookies used, and started the control to delete non-saved cookies

--- a/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
+++ b/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
@@ -133,6 +133,8 @@
     <Compile Include="Models\CookieLawPart.cs" />
     <Compile Include="Models\CookieSettingsPart.cs" />
     <Compile Include="Models\HubSpotSettingsPart.cs" />
+    <Compile Include="Providers\DefaultCookieProvider.cs" />
+    <Compile Include="Providers\ICookieProvider.cs" />
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\GDPRScript.cs" />
     <Compile Include="Services\HubSpotCookieGDPR.cs" />
