--- a/src/Modules/Laser.Orchard.Accessibility/Laser.Orchard.Accessibility.csproj
+++ b/src/Modules/Laser.Orchard.Accessibility/Laser.Orchard.Accessibility.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\Accessibility.cs" />
     <Compile Include="Services\AccessibilityServices.cs" />
+    <Compile Include="Services\AdditionalCookieProvider.cs" />
     <Compile Include="Services\IAccessibilityServices.cs" />
     <Compile Include="StringWriterWithEncoding.cs" />
     <Compile Include="Utils.cs" />
@@ -150,6 +151,10 @@
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
       <Name>Orchard.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Laser.Orchard.Cookies\Laser.Orchard.Cookies.csproj">
+      <Project>{BDB0CD8D-7C6C-46F0-A041-6B2E1E0F9C9E}</Project>
+      <Name>Laser.Orchard.Cookies</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
